--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "name": "lox.js",
+  "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "example": "node index.js example.lox",
     "test": "standard"
   },
   "devDependencies": {
     "standard": "8.6.0"
+  },
+  "bin": {
+    "lox.js": "index.js"
   }
 }
