--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "example": "node index.js example.lox",
-    "simple-example": "node index.js simple.lox",
-    "prints-example": "node index.js prints.lox",
+    "example": "node index.js examples/example.lox",
+    "simple-example": "node index.js examples/simple.lox",
+    "prints-example": "node index.js examples/prints.lox",
     "test": "standard"
   },
   "devDependencies": {
